Weak Content Overflow Fix

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ body{
     font-size: 50px;
     font-family: 'digital-clock-font';
     padding: 0px 10px;
+
+    overflow: hidden;
 }
 
 .result{
